Dynamic import test 1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "ignoreDeprecations": "6.0",
     "paths": {
       "@/utils/*": ["utils/*"],
+      "@/components/notion-ui/*": ["notion-ui/*"],
       "@/*": ["*"]
     }
   }
